--- a/resources/js/Components/phone/PhoneContainer.scss
+++ b/resources/js/Components/phone/PhoneContainer.scss
@@ -9,6 +9,8 @@
         0px 0px 0px 13px #191919,
         0px 0px 0px 20px #111;
     overflow: hidden;
+    user-select: none;
+    z-index: 50;
 
     @media screen and (min-width: 500px) {
         width: 360px;
